# rust-example

./: README.md
actix-tutorial/hello-world/src/: main.rs
actix-tutorial/hello-world/src/services/: hello.rs  mod.rs
axum-tutorial/: docker-compose.yml
axum-tutorial/database/: init.sql
axum-tutorial/hello-world/: Cargo.toml
axum-tutorial/hello-world/src/: main.rs
axum-tutorial/routing/: Cargo.toml
axum-tutorial/routing/src/: lib.rs
axum-tutorial/routing/src/routes/: get_json.rs  hello_world.rs  middleware_custom_header.rs  mod.rs  (+8 more)
communicator/src/: client.rs  lib.rs
communicator/src/network/: mod.rs
communicator_example/: Cargo.toml
communicator_example/src/: lib.rs
data_struct/src/: main.rs
easy-rust/src/: main.rs
enumerate/src/: main.rs
etc_example/: Cargo.toml
etc_example/src/: main.rs
functions/src/: main.rs
hello-wasm/: Cargo.toml
hello-wasm/site/: index.js  package-lock.json  package.json
hello_world_in_yew/: Cargo.toml
hello_world_in_yew/src/: lib.rs  main.rs
loops/src/: main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
rust-fullstack-example/backend/: .gitignore  Cargo.toml
rust-fullstack-example/backend/src/: error.rs  handler.rs  main.rs
tauri-react/: package-lock.json  package.json
tauri-react/src/: App.tsx
tauri-react/src-tauri/: tauri.conf.json
todo-actix/: .env  Cargo.toml
todo-actix/src/: main.rs  services.rs
universal_programming_concepts/: Cargo.toml
universal_programming_concepts/src/: main.rs
yew-video-stareaming/: Cargo.toml  index.html
yew-video-stareaming/src/: main.rs
(+3 files in other folders)
