[package]
name = "hello-wasm"
version = "0.1.1"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["sungjin96 <sungjin5891@gmail.com>"]
description = "A sample project with wasm-pack"
repository = "https://github.com/sungjin96/hello-wasm"

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.81"